test/sema/typeck/enum/assign.dora
enum A { V1 }
fn f() { A = 1; }
